fix about section overflow

--- a/src/styles/home/style.scss
+++ b/src/styles/home/style.scss
@@ -138,6 +138,7 @@ main {
 
     section#about {
         position: relative;
+        overflow-x: hidden;
 
         &::before {
             content: "";
